[tool.poetry]
name = "onchain_consensus"
version = "0.1.0"
description = ""
authors = ["Powerloom, Inc."]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.4.0"
pika = "^1.3.1"
aio-pika = "^8.3.0"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
fastapi = "^0.88.0"
async-limits = {git = "https://github.com/powerloom/limits.git"}
tenacity = "^8.1.0"
limits = "^2.8.0"
httpx = "^0.23.2"
ipfs-toolkit = {git = "https://github.com/anomit/IPFS-Toolkit-Python.git", rev = "76dc979dd8ca6c31b0fe07d41cf13d3c467072c8"}
uvicorn = "^0.20.0"
setproctitle = "^1.3.2"
typer = "^0.7.0"
mnemonic = "^0.20"
aiohttp = "^3.8.6"
aiorwlock = "^1.3.0"
uvloop = "^0.17.0"
web3 = "^6.6.1"
eth-abi = "^4.1.0"
eth-utils = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
